Shopping cart is ready, but not responsive, active links are green

--- a/Favourites.html
+++ b/Favourites.html
@@ -23,7 +23,7 @@
    
     <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"> 
+    <a class="navbar-brand" href="index.html"> 
       <img src="./assets/img/navbar_logo_icons/logo.png" width="100" height="30" class="d-inline-block align-top"> 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,10 +32,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Women</a>
+          <a class="nav-link" href="womanPage.html">Women</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Men</a>
+          <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">New in</a>
@@ -44,7 +44,7 @@
           <a class="nav-link" href="#">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About sustainability</a>
+          <a class="nav-link" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
   
@@ -59,10 +59,10 @@
     <a href="#" class="text-dark"><i class="fas fa-user m-2" ></i></a>
   </li>
   <li class="nav-item">
-    <a href="#" class="text-dark"><i class="fas fa-heart m-2 " ></i></a>
+    <a href="favourites.html" class="text-dark"><i class="fas fa-heart m-2 text-success" ></i></a>
   </li>
   <li class="nav-item">
-    <a href="#" class="text-dark"><i class="fas fa-shopping-cart m-2 " ></i></a>
+    <a href="cartPage.html" class="text-dark"><i class="fas fa-shopping-cart m-2 " ></i></a>
   </li>
     </div>
   </nav>
@@ -79,7 +79,7 @@
           <div class="card mb-1 box-shadow w-100">
             <img class="card-img-top" src="./assets/img/favourites_pics/111.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">89,99€</h5>
+                <h5 class="card-title">€ 89,99</h5>
                 <p class="card-text text-dark">Cotton blouse - long sleeve</p>
               <div class="d-flex justify-content-between align-items-center">
                 <button type="button" class="btn btn-sm btn-secondary">Info</button>
@@ -100,7 +100,7 @@
             <div class="card mb-1 box-shadow">
               <img class="card-img-top" src="./assets/img/favourites_pics/denim-5138278_960_720.jpg" alt="Card image cap">
               <div class="card-body">
-                  <h5 class="card-title">129,99€</h5>
+                  <h5 class="card-title">€ 129,99</h5>
                   <p class="card-text">Jeans - high waist</p>
                 <div class="d-flex justify-content-between align-items-center">
                  
@@ -124,7 +124,7 @@
           <div class="card mb-1 box-shadow">
             <img class="card-img-top" src="./assets/img/favourites_pics/fashion-5138284_960_720.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">89,99€</h5>
+                <h5 class="card-title">€ 89,99</h5>
                 <p class="card-text">Jeans jacket - oversize</p>
               <div class="d-flex justify-content-between align-items-center">
                
@@ -243,7 +243,7 @@
             <div class="col-md-4">
                 <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-success"></i><i
                         class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
-                <h4 class="my-3">Credible brends only</h4>
+                <h4 class="my-3">Credible brands only</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                     architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
