--- a/sustainPage.html
+++ b/sustainPage.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="womanPage.html">Women</a>
+          <a class="nav-link" href="womanPage.html">Women</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="menPage.html">Men</a>
@@ -44,7 +44,7 @@
           <a class="nav-link" href="#">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="sustainPage.html">About sustainability</a>
+          <a class="nav-link text-success font-weight-bold" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
   
@@ -59,10 +59,10 @@
     <a href="#" class="text-dark"><i class="fas fa-user m-2" ></i></a>
   </li>
   <li class="nav-item">
-    <a href="#" class="text-dark"><i class="fas fa-heart m-2 " ></i></a>
+    <a href="favourites.html" class="text-dark"><i class="fas fa-heart m-2 " ></i></a>
   </li>
   <li class="nav-item">
-    <a href="#" class="text-dark"><i class="fas fa-shopping-cart m-2 " ></i></a>
+    <a href="cartPage.html" class="text-dark"><i class="fas fa-shopping-cart m-2 " ></i></a>
   </li>
     </div>
   </nav>
