--- a/womanPage.html
+++ b/womanPage.html
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="womanPage.html">Women</a>
+          <a class="nav-link text-success font-weight-bold" href="womanPage.html">Women</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="menPage.html">Men</a>
@@ -50,7 +50,7 @@
           <a class="nav-link" href="#">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="sustainPage.html">About sustainability</a>
+          <a class="nav-link" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
 
@@ -65,10 +65,10 @@
         <a href="#" class="text-dark"><i class="fas fa-user m-2"></i></a>
       </li>
       <li class="nav-item">
-        <a href="#" class="text-dark"><i class="fas fa-heart m-2 "></i></a>
+        <a href="favourites.html" class="text-dark"><i class="fas fa-heart m-2 "></i></a>
       </li>
       <li class="nav-item">
-        <a href="#" class="text-dark"><i class="fas fa-shopping-cart m-2 "></i></a>
+        <a href="cartPage.html" class="text-dark"><i class="fas fa-shopping-cart m-2 "></i></a>
       </li>
     </div>
   </nav>
@@ -81,7 +81,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Ethically</h1>
+        <h1 class="my-4">Ethic.ally</h1>
         <div class="list-group">
           <a href="#" class="list-group-item">Color</a>
           <a href="#" class="list-group-item">Size</a>
@@ -137,7 +137,7 @@
                   <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
                   <div class="stamps m-1">
                     <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li><small class="text-success">Organic cotton</small></li>
                       <li> <small class="text-success">Made in EU</small></li>
                       <li><small class="text-success">Fairtrade</small></li>
                     </ul>
@@ -162,7 +162,7 @@
                   <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
                   <div class="stamps m-1">
                     <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li><small class="text-success">Organic cotton</small></li>
                       <li> <small class="text-success">Made in EU</small></li>
                       <li><small class="text-success">Fairtrade</small></li>
                     </ul>
@@ -188,7 +188,7 @@
                   <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
                   <div class="stamps m-1">
                     <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li><small class="text-success">Organic cotton</small></li>
                       <li> <small class="text-success">Made in EU</small></li>
                       <li><small class="text-success">Fairtrade</small></li>
                     </ul>
@@ -214,7 +214,7 @@
                   <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
                   <div class="stamps m-1">
                     <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li><small class="text-success">Organic cotton</small></li>
                       <li> <small class="text-success">Made in EU</small></li>
                       <li><small class="text-success">Fairtrade</small></li>
                     </ul>
@@ -240,7 +240,7 @@
                   <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
                   <div class="stamps m-1">
                     <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li><small class="text-success">Organic cotton</small></li>
                       <li> <small class="text-success">Made in EU</small></li>
                       <li><small class="text-success">Fairtrade</small></li>
                     </ul>
@@ -266,7 +266,7 @@
                   <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
                   <div class="stamps m-1">
                     <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li><small class="text-success">Organic cotton</small></li>
                       <li> <small class="text-success">Made in EU</small></li>
                       <li><small class="text-success">Fairtrade</small></li>
                     </ul>
