new page added,  working on responsive s.c

--- a/menPage.html
+++ b/menPage.html
@@ -47,7 +47,7 @@
           <a class="nav-link" href="#">New in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Inspiration</a>
+          <a class="nav-link" href="inspirationPage.html">Inspiration</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="sustainPage.html">About sustainability</a>
@@ -82,8 +82,8 @@
       <div class="col-lg-3">
 
         <h1 class="my-4">Ethic.ally</h1>
-        <div class="list-group">
-          <a href="#" class="list-group-item">Color</a>
+        <div class="list-group gray-dark">
+          <a href="#" class="list-group-item ">Color</a>
           <a href="#" class="list-group-item">Size</a>
           <a href="#" class="list-group-item">Fabric</a>
           <a href="#" class="list-group-item">Style</a>
