--- a/sustainPage.html
+++ b/sustainPage.html
@@ -41,7 +41,7 @@
           <a class="nav-link" href="#">New in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Inspiration</a>
+          <a class="nav-link" href="inspirationPage.html">Inspiration</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-success font-weight-bold" href="sustainPage.html">About sustainability</a>
