--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#">New in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Inspiration</a>
+          <a class="nav-link" href="inspirationPage.html">Inspiration</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="sustainPage.html">About sustainability</a>
