collection added, colors fixed

--- a/Favourites.html
+++ b/Favourites.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">New in</a>
+          <a class="nav-link" href="collections.html">New in</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Inspiration</a>
@@ -51,7 +51,7 @@
       <!-- START search  -->
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button> 
       </form>
    <!--END search   -->
   
@@ -59,7 +59,7 @@
     <a href="#" class="text-dark"><i class="fas fa-user m-2" ></i></a>
   </li>
   <li class="nav-item">
-    <a href="favourites.html" class="text-dark"><i class="fas fa-heart m-2 text-success" ></i></a>
+    <a href="favourites.html" class="text-dark"><i class="fas fa-heart m-2 text-primary" ></i></a>
   </li>
   <li class="nav-item">
     <a href="cartPage.html" class="text-dark"><i class="fas fa-shopping-cart m-2 " ></i></a>
@@ -227,21 +227,21 @@
         </div>
         <div class="row text-center">
             <div class="col-md-4">
-                <span class="fa-stack fa-4x" ><i class="fas fa-circle fa-stack-2x text-success"></i>
+                <span class="fa-stack fa-4x" ><i class="fas fa-circle fa-stack-2x text-primary"></i>
                     <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
                 <h4 class="my-3">Free returns</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                     architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
-                <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-success"></i><i
+                <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i
                         class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
                 <h4 class="my-3">Fast delivery</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                     architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
-                <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-success"></i><i
+                <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i
                         class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
                 <h4 class="my-3">Credible brands only</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
