--- a/cartPage.html
+++ b/cartPage.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">New in</a>
+          <a class="nav-link" href="collections.html">New in</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Inspiration</a>
@@ -53,7 +53,7 @@
       <!-- START search  -->
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
       </form>
       <!--END search   -->
 
@@ -64,7 +64,7 @@
         <a href="favourites.html" class="text-dark"><i class="fas fa-heart m-2 "></i></a>
       </li>
       <li class="nav-item">
-        <a href="cartPage.html" class="text-dark"><i class="fas fa-shopping-cart m-2 text-success"></i></a>
+        <a href="cartPage.html" class="text-dark"><i class="fas fa-shopping-cart m-2 text-primary"></i></a>
       </li>
     </div>
   </nav>
