--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">New in</a>
+          <a class="nav-link" href="collections.html">New in</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="inspirationPage.html">Inspiration</a>
@@ -52,7 +52,7 @@
       <!-- START search  -->
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-         <button class="btn btn-outline-suc my-2 my-sm-0" type="submit">Search</button> 
+         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button> 
       </form>
    <!--END search   -->
   
