--- a/sustainPage.html
+++ b/sustainPage.html
@@ -38,20 +38,20 @@
           <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">New in</a>
+          <a class="nav-link" href="collections.html">New in</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="inspirationPage.html">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success font-weight-bold" href="sustainPage.html">About sustainability</a>
+          <a class="nav-link text-primary font-weight-bold" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
   
       <!-- START search  -->
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
       </form>
    <!--END search   -->
   
