--- a/collections.html
+++ b/collections.html
@@ -234,16 +234,16 @@
               <h4 class="footer-widget-title">Popular Categories</h4>
               <ul>
                 <li>
-                  <a href="#">Men</a>
+                  <a href="menPage.html">Men</a>
                 </li>
                 <li>
-                  <a href="#">Women</a>
+                  <a href="womanPage.html">Women</a>
                 </li>
                 <li>
-                  <a href="#">Sustainability</a>
+                  <a href="sustainPage.html">Sustainability</a>
                 </li>
                 <li>
-                  <a href="#">Our brands</a>
+                  <a href="sustainPage.html">Our brands</a>
                 </li>
                 <li>
                   <a href="#">Our auditing process for brands</a>
@@ -262,16 +262,16 @@
               <h4 class="footer-widget-title">Our Company</h4>
               <ul>
                 <li>
-                  <a href="#">About Us</a>
+                  <a href="index.html">About Us</a>
                 </li>
                 <li>
-                  <a href="#">Testimonials</a>
+                  <a href="index.html">Testimonials</a>
                 </li>
                 <li>
-                  <a href="#">Contact Us</a>
+                  <a href="index.html">Contact Us</a>
                 </li>
                 <li>
-                  <a href="#">Blog</a>
+                  <a href="inspirationPage.html">Blog</a>
                 </li>
               </ul>
             </div>
