--- a/inspirationPage.html
+++ b/inspirationPage.html
@@ -197,16 +197,16 @@
                                 <h4 class="footer-widget-title">Popular Categories</h4>
                                 <ul>
                                     <li>
-                                        <a href="#">Men</a>
+                                        <a href="menPage.html">Men</a>
                                     </li>
                                     <li>
-                                        <a href="#">Women</a>
+                                        <a href="womanPage.html">Women</a>
                                     </li>
                                     <li>
-                                        <a href="#">Susutainability</a>
+                                        <a href="sustainPage.html">Susutainability</a>
                                     </li>
                                     <li>
-                                        <a href="#">Our brends</a>
+                                        <a href="sustainPage.html">Our brends</a>
                                     </li>
                                     <li>
                                         <a href="#">Our auditing process for brends</a>
@@ -225,16 +225,16 @@
                                 <h4 class="footer-widget-title">Our Company</h4>
                                 <ul>
                                     <li>
-                                        <a href="#">About Us</a>
+                                        <a href="index.html">About Us</a>
                                     </li>
                                     <li>
-                                        <a href="#">Testimonials</a>
+                                        <a href="index.html">Testimonials</a>
                                     </li>
                                     <li>
-                                        <a href="#">Contact Us</a>
+                                        <a href="index.html">Contact Us</a>
                                     </li>
                                     <li>
-                                        <a href="#">Blog</a>
+                                        <a href="inspirationPage.html">Blog</a>
                                     </li>
                                 </ul>
                             </div>
