--- a/womanPage.html
+++ b/womanPage.html
@@ -81,12 +81,16 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Ethic.ally</h1>
+        <h1 class="my-4"></h1>
         <div class="list-group">
           <a href="#" class="list-group-item">Color</a>
           <a href="#" class="list-group-item">Size</a>
           <a href="#" class="list-group-item">Fabric</a>
           <a href="#" class="list-group-item">Style</a>
+          <a href="#" class="list-group-item">Brand</a>
+          <a href="#" class="list-group-item">Country</a>
+          <a href="#" class="list-group-item">Outlet</a>
+          <a href="#" class="list-group-item">Sale</a>
         </div>
 
       </div>
@@ -96,7 +100,7 @@
 
        
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel" style="width:100%;
-        height:360px; position : relative">  
+        height:500px; position : relative">  
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -104,13 +108,13 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="assets/img/women/1.jpg" alt="First slide" style = "height: 60%;" > 
+              <img class="d-block img-fluid" src="assets/img/women/1.jpg" alt="First slide" style = "height: 90%;" > 
                         </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="assets/img/women/2.jpg" alt="Second slide" style = "height: 60%;">
+              <img class="d-block img-fluid" src="assets/img/women/2.jpg" alt="Second slide" style = "height: 90%;">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="assets/img/women/3.jpg" alt="Third slide" style = "height: 60%;">
+              <img class="d-block img-fluid" src="assets/img/women/3.jpg" alt="Third slide" style = "height: 90%;">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -134,7 +138,7 @@
                 <h5>€ 90.99</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add</button>
                   <div class="stamps m-1">
                     <ul>
                       <li><small class="text-success">Organic cotton</small></li>
@@ -159,7 +163,7 @@
                 <h5>€ 90.99</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add</button>
                   <div class="stamps m-1">
                     <ul>
                       <li><small class="text-success">Organic cotton</small></li>
@@ -185,7 +189,7 @@
                 <h5>€ 90.99</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add</button>
                   <div class="stamps m-1">
                     <ul>
                       <li><small class="text-success">Organic cotton</small></li>
@@ -211,7 +215,7 @@
                 <h5>€ 90.99</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add</button>
                   <div class="stamps m-1">
                     <ul>
                       <li><small class="text-success">Organic cotton</small></li>
@@ -237,7 +241,7 @@
                 <h5>€ 90.99</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add</button>
                   <div class="stamps m-1">
                     <ul>
                       <li><small class="text-success">Organic cotton</small></li>
@@ -263,7 +267,7 @@
                 <h5>€ 90.99</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add</button>
                   <div class="stamps m-1">
                     <ul>
                       <li><small class="text-success">Organic cotton</small></li>
