working on table responsivness

--- a/cartPage.html
+++ b/cartPage.html
@@ -80,22 +80,22 @@
           <table class="table table-hover">
               <thead>
                   <tr>
-                      <th>Product</th>
-                      <th>Quantity</th>
-                      <th class="text-center">Price</th>
-                      <th class="text-center">Discount</th>
-                      <th class="text-center">Total</th>
-                      <th> </th>
+                      <th scope="col">Product</th>
+                      <th scope="col">Quantity</th>
+                      <th scope="col" class="text-center">Price</th>
+                      <th scope="col"  class="text-center">Discount</th>
+                      <th scope="col"  class="text-center">Total</th>
+                      <th scope="col"> </th>
                   </tr>
               </thead>
               <tbody>
                   <tr>
                       <td class="col-sm-8 col-md-6">
                       <div class="media">
-                          <a class="thumbnail pull-left" href="#"> <img class="mr-3" src="./assets/img/favourites_pics/girl-1307420_1920.jpg" style="width: 80px; height: 110px;"> </a>
+                          <a class="img-thumbnail-float-left" href="#"><img class="mr-3" src="./assets/img/favourites_pics/girl-1307420_1920.jpg" style="width: 100px;"> </a>
                           <div class="media-body">
-                              <h4 class="media-heading">Item name</h4>
-                              <h5 class="media-heading"> by Brand name</h5>
+                              <h5 class="h5" >Item name</h5>
+                              <h6 class="text-muted"> by Brand name</h>
                               <p class="mb-1">Color: beige</p>
                               <p>Size: S</p>
                           </div>
@@ -114,10 +114,10 @@
                   <tr>
                       <td class="col-md-6">
                       <div class="media">
-                          <a class="thumbnail pull-left" href="#"> <img class="mr-4" src="./assets/img/favourites_pics/fashion-5138284_960_720.jpg" style="width: 72px; height: 90px;"> </a>
+                        <a class="img-thumbnail-float-left" href="#"><img class="mr-3" src="./assets/img/favourites_pics/fashion-5138284_960_720.jpg" style="width: 100px;"> </a>
                           <div class="media-body">
-                              <h4 class="media-heading">Item name</h4>
-                              <h5 class="media-heading"> by Brand name</h5>
+                            <h5 class="h5" >Item name</h5>
+                            <h6 class="text-muted"> by Brand name</h6>
                               <p class="mb-1">Color: pink</p>
                               <p>Size: S</p>
                           </div>
